force-app/main/default/objects/Opportunity/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking if the opportunity has been approved.</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>