force-app/main/default/objects/Opportunity/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>Deal Budget for the Opportunity.</description>
    <inlineHelpText>Please provide a budget amount for the current opportunity</inlineHelpText>
    <label>Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>