force-app/main/default/objects/Opportunity/fields/Flowcheck__c.field-meta.xml
<CustomField>
    <fullName>Flowcheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden checkbox for challenge check.</description>
    <label>Flowcheck</label>
    <type>Checkbox</type>
</CustomField>