force-app/main/default/objects/Opportunity/fields/ReviewExist__c.field-meta.xml
<CustomField>
    <fullName>ReviewExist__c</fullName>
    <description>Checking if there is a review record associated with the opportunity.</description>
    <label>ReviewExist</label>
    <summaryForeignKey>Review__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>