force-app/main/default/objects/Opportunity/fields/Timing__c.field-meta.xml
<CustomField>
    <fullName>Timing__c</fullName>
    <description>Opportunity Timeline.</description>
    <inlineHelpText>Please provide the Opportunity Timeline.</inlineHelpText>
    <label>Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-3 Months</fullName>
            </value>
            <value>
                <fullName>4-6 Months</fullName>
            </value>
            <value>
                <fullName>7-12 Months</fullName>
            </value>
            <value>
                <fullName>&gt;12 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>