force-app/main/default/objects/Opportunity/fields/Volunteer_Experience__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Experience__c</fullName>
    <label>Volunteer Experience</label>
    <type>TextArea</type>
</CustomField>