force-app/main/default/objects/Opportunity/fields/Volunteer_Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Responsibilities__c</fullName>
    <label>Volunteer Responsibilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>