force-app/main/default/objects/Opportunity/recordTypes/Opportunity_Default_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Default_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Default Sales Process</businessProcess>
    <label>Opportunity Default Record Type</label>
</RecordType>