force-app/main/default/objects/Opportunity/recordTypes/Process_Approval.recordType-meta.xml
<RecordType>
    <fullName>Process_Approval</fullName>
    <active>true</active>
    <businessProcess>Default Sales Process</businessProcess>
    <label>Process Approval</label>
</RecordType>