force-app/main/default/objects/Opportunity/recordTypes/Submit_for_Review.recordType-meta.xml
<RecordType>
    <fullName>Submit_for_Review</fullName>
    <active>true</active>
    <businessProcess>Default Sales Process</businessProcess>
    <label>Submit for Review</label>
</RecordType>