force-app/main/default/objects/Opportunity/validationRules/Approval_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Needed</fullName>
    <active>true</active>
    <description>Enforce the user to submit approval for the current record in the Proposal/Price Quote stage.</description>
    <errorConditionFormula>AND(
OR(ISPICKVAL(StageName, &quot;Negotiation/Review&quot;),
ISPICKVAL(StageName, &quot;Closed Won&quot;),
ISPICKVAL(StageName, &quot;Closed Lost&quot;)),
Approved__c = False
)</errorConditionFormula>
    <errorMessage>Please make sure you have submitted approval for your current record.</errorMessage>
</ValidationRule>