force-app/main/default/objects/Opportunity/validationRules/Oppt_Closedate.validationRule-meta.xml
<ValidationRule>
    <fullName>Oppt_Closedate</fullName>
    <active>true</active>
    <description>The Opportunity Close date cannot be in the past.</description>
    <errorConditionFormula>CloseDate &lt; TODAY() &amp;&amp; IsNew()</errorConditionFormula>
    <errorMessage>The Opportunity Close Date cannot be scheduled before the current date.</errorMessage>
</ValidationRule>